[workspace]
members = [".", "assembly", "concurrency", "n-body"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["xiaoyu"]

[workspace.dependencies]
tonic = "*"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
prost = "0.13"
tonic-build = "*"


[package]
name = "rust-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
